--- a/index.html
+++ b/index.html
@@ -3,81 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Consecuencias del Tabaco</title>
+    <title>La Carta</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Consecuencias del Consumo de Tabaco</h1>
-
-    <ol>
-        <li>Cáncer de pulmón: El tabaco es la principal causa de cáncer de pulmón, que es
-            uno de los tipos de cáncer más mortales. Fumar está directamente relacionado con
-            la mayoría de los casos de esta enfermedad.</li>
-        <li>Enfermedades cardiovasculares: Fumar tabaco aumenta significativamente el
-            riesgo de enfermedades cardíacas y accidentes cerebrovasculares. Estas
-            afecciones pueden llevar a la muerte súbita y discapacidad grave.</li>
-        <li>Enfermedad pulmonar obstructiva crónica (EPOC): Enfermedad pulmonar obstructiva crónica (EPOC): El consumo de tabaco es una
-            causa principal de EPOC, una enfermedad progresiva que causa dificultad para
-            respirar y puede ser fatal.</li>
-        <li>Cánceres distintos del de pulmón: Además del cáncer de pulmón, el tabaco está
-        relacionado con varios otros tipos de cáncer, incluyendo el cáncer de boca,
-        garganta, esófago, páncreas, vejiga, riñón y estómago.</li>
-
-        <li>Problemas respiratorios crónicos: Fumar puede causar bronquitis crónica y
-            empeorar el asma, lo que lleva a dificultades respiratorias y una calidad de vida
-            significativamente reducida.</li>
-    </ol>
-
-<h2>¿Por qué NO Fumar?</h2>
-<h3>Aqui tienes algunas razones para no fumar, especialmente orientadas a adolescentes:</h3>
-<ol>
-    <li>
-        <strong>Salud a Largo Plazo:</strong>
-        <ul>
-            <li>Prevención de Enfermedades: Fumar puede causar enfermedades graves como cáncer
-                de pulmón, enfermedades cardíacas y enfermedades pulmonares crónicas.</li>
-            <li>Crecimiento y Desarrollo:: El tabaco puede interferir con el desarrollo pulmonar adecuado
-                y general del cuerpo, afectando el crecimiento durante la adolescencia.</li>
-        </ul>
-    </li>
-    <li>
-        <strong>Apariencia y Condición Física:</strong>
-        <ul>
-            <li>Piel y Dientes: Fumar puede causar manchas en los dientes y envejecimiento prematuro
-                de la piel, haciendo que luzca arrugada y apagada.</li>
-            <li>Capacidad Atlética: Fumar reduce la capacidad pulmonar, haciendo más difícil realizar
-                actividades físicas y deportes.</li>
-        </ul>
-    </li>
-    <li>
-        <strong>Impacto Social y Familiar:</strong>
-        <ul>
-            <li>Mal Aliento y Olor: El tabaco deja un olor desagradable en la ropa, el cabello y el aliento,
-                lo que puede alejar a amigos y familiares.</li>
-            <li>Ejemplo para los Demás:: No fumar ayuda a ser un buen ejemplo para hermanos
-                menores y amigos, promoviendo hábitos saludables en el entorno social.</li>
-        </ul>
-    </li>
-    <li>
-        <strong>Aspectos Económicos:</strong>
-        <ul>
-            <li>Costo del Tabaco: Fumar es caro, y el dinero gastado en cigarrillos podría usarse para
-                cosas más productivas y divertidas, como hobbies, ropa o gadgets.</li>
-            <li>Gastos Médicos: A largo plazo, fumar puede llevar a altos costos médicos debido a
-                enfermedades relacionadas con el tabaco.</li>
-        </ul>
-    </li>
-    <li>
-        <strong>Libertad y Control:</strong>
-        <ul>
-            <li>Dependencia y Adicción: La nicotina es altamente adictiva. Una vez que empiezas a
-                fumar, puede ser muy difícil dejarlo, lo que significa perder el control sobre tu propia vida.</li>
-            <li>Influencia de Marketing: No fumar es una manera de resistir la manipulación de las
-                compañías tabacaleras que intentan atraer a los jóvenes a sus productos para ganar dinero
-                a expensas de la salud.</li>
-        </ul>
-    </li>
-</ol>
-
+    <h1>La Carta</h1>
+    <h2>Menú Diario</h2>
+    <ul>
+        <li>Primer Plato
+            <ol>
+                <li>Arroz al horno</li>
+                <li>Paella</li>
+                <li>Fideuá
+                    <ul>
+                      <ol type="I">
+                        <li>De Gandía</li>
+                        <li>De boletus</li>
+                      </ol>
+                    </ul>
+                 </li>
+            </ol>
+        </li>
+        <li>Segundo Plato
+            <ol type="a">
+                <li>Lomo a la valenciana</li>
+                <li>Lenguado</li>
+                <li>Entrecot en su salsa</li>
+            </ol>
+        </li>
+        <li>Postre o café</li>
+    </ul>
 </body>
 </html>
